--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ server.port=8099
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 logging.level.org.springframework.data.mongodb.repository.Query=DEBUG
+feign.hystrix.enabled=true
